<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.odb.simpleasynceventhandler.DispatchEventsActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#999"
        >

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="100dp"
            android:id="@+id/catImageView1"
            android:contentDescription="@string/most_likely_cat"
            android:background="#000" />
        <Button
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:text="@string/give_me_cat"
            android:id="@+id/btnLoadCatImage1"
             />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#CCC">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="100dp"
            android:contentDescription="@string/most_likely_cat"
            android:id="@+id/catImageView2"
            android:background="#000" />
        <Button
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:text="@string/give_me_cat"
            android:id="@+id/btnLoadCatImage2"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#999">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="100dp"
            android:contentDescription="@string/most_likely_cat"
            android:id="@+id/catImageView3"
            android:background="#000" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:text="@string/automatic_cat"
            android:id="@+id/textView"
            android:gravity="center_vertical|center_horizontal" />

    </LinearLayout>
</LinearLayout>
